--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,8 +130,14 @@
   <data name="b_fotfor_lush3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\b_fotfor_lush3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="quitImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\quitImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="stand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stand.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="startImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\startImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="walkLeft_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\walkLeft_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
