--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,21 @@
   <data name="b_fotfor_lush3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\b_fotfor_lush3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="projectil_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\projectil_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="projectil_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\projectil_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="projectil_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\projectil_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="projectil_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\projectil_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="projectil_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\projectil_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="quitImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\quitImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
