--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -133,8 +133,23 @@
   <data name="b_fotfor_lush3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\b_fotfor_lush3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="coin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coin_star" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coin_star.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="enemy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enemy.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="enemy_jotaro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\enemy_jotaro.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="highscoreImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\highscoreImage.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="highscoreList" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\highscoreList.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="playerImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\playerImage.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
